styles/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
}

.container {
    padding: 50px 100px;
}

.logo {
    width: 40px;
    height: 35px;
    flex-shrink: 0;
}

.game-icon {
    width: 75px;
    height: 35px;
    flex-shrink: 0;
}

.gamer-tag {
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-size: 35px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.g {
    color: rgb(237, 138, 154);
    font-family: 'Open Sans', sans-serif;
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 50px 100px;
    height: 25px;
    background: #FFF;
    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);

}

.nav-2 {
    display: flex;
    align-items: center;
    gap: 20px;
}

.div-1,
.div-3 {
    display: flex;
    align-items: center;
    gap: 20px;
}

.div-2 ul {
    display: flex;
    list-style: none;
    gap: 15px;
    color: #3C354F;
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
}

.nav-title {
    display: flex;
    list-style: none;
    gap: 15px;
    color: #3C354F;
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
    align-items: center;
    font-family: 'Open Sans', sans-serif;
}

.div-3 {
    width: 262px;
    height: 56px;
    flex-shrink: 0;
    border-radius: 8px;
    background: rgba(11, 2, 35, 0.10);
    align-items: center;
    padding: 5px;
    justify-content: center;
}


/* Banner section */

.banner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 50px 100px;
    background-image: url(../images/Group\ 14.png);
    background-repeat: no-repeat;
    background-size: 700px;
    width: 1300px;
    height: 440px;
    flex-shrink: 0;
    fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
}

.banner-img {
    height: 550px;
}

.banner-title-1 {
    color: #0B0223;
    font-size: 40px;
    font-style: normal;
    font-weight: 600;
    text-transform: uppercase;
    padding-left: 5px;
}


.banner-title-2 {
    text-align: left;
    font-family: 'Open Sans', sans-serif;
    font-size: 80px;
    font-style: normal;
    font-weight: 800;
    line-height: normal;
    text-transform: uppercase;
    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}




.banner ul {
    color: #534C64;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    text-transform: lowercase;
    margin-top: 5px;
    gap: 100px;
    font-family: 'Open Sans', sans-serif;
    text-align: left;
    padding-left: 30px;
}

.btn-1 {
    display: inline-flex;
    padding: 15px 30px;
    margin-top: 35px;
    align-items: flex-start;
    gap: 10px;
    border: none;
    border-radius: 48px;
    color: #FFF;
    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    text-transform: uppercase;

}

.btn-2 {
    display: inline-flex;
    padding: 15px 30px;
    align-items: flex-start;
    gap: 10px;
    border: none;
    border-radius: 48px;
    color: #FFF;
    background: #4EC5F7;
    margin-left: 15px;
    font-family: 'Open Sans', sans-serif;
    color: #FFF;
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    text-transform: uppercase;
}


/* Main section */

/* Box section */

.box-text {
    text-align: center;
    margin-top: 50px;
}

.box-text-1 {
    color: #0B0223;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    font-family: 'Open Sans', sans-serif;
}

.box-text-2 {
    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.box-container {
    display: flex;
    justify-content: space-between;
    gap: 25px;
    padding: 50px 100px;


}

.box-container .box img {
    width: 300px;
    height: 350px;
    flex-shrink: 0;
    border-radius: 12px;
    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
    margin-bottom: 5px;
    justify-content: space-evenly;
}

.box-container .box img:hover {
    border: 6px solid #F948B2;
    cursor: pointer;

}

.box p {
    color: #534C64;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: 30px;
    font-family: 'Open Sans', sans-serif;

}

/* Play section  */

.play {
    display: flex;
    padding: 50px 100px 0px;
    height: 650px;
}

.play .img-1 {
    width: 550px;
    height: 500px;
    flex-shrink: 0;
    border-radius: 8px;
    background: url(<path-to-image>), lightgray 0px -18.568px / 100% 146.779% no-repeat;
}

.play .img-2 {
    width: 250px;
    height: 300px;
    flex-shrink: 0;
    border-radius: 8px;
    border: 2px solid #FFF;
    background: url(<path-to-image>), lightgray -7.209px 0px / 114.78% 100% no-repeat;
    position: relative;
    bottom: 200px;
    margin-left: 400px;
}

.play-text {
    margin-right: 200px;
    margin-top: 150px;
    font-family: 'Open Sans', sans-serif;
}

.play-title-1 {
    font-family: 'Open Sans', sans-serif;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 60px;
    background: #F948B2;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.play-title-2 {
    font-family: 'Open Sans', sans-serif;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 60px;
    background: rgb(236, 77, 236);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}

.play-title {
    font-family: 'Open Sans', sans-serif;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 60px;
    background: black;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}

.play-description {
    color: #534C64;
    font-size: 15px;
    font-style: normal;
    font-weight: 400;
    line-height: 30px;
    font-family: 'Open Sans', sans-serif;

}

/* Button section  */

.button button {
    display: flex;
    align-items: center;
    gap: 5px;
    width: 248px;
    height: 80px;
    flex-shrink: 0;
    border: 1px solid #FFF;
    border-radius: 50px;
    background: #FFF;


}

.button {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding: 50px 100px;
    gap: 15px;

}


.hover:hover {
    border-color: #F948B2;
    color: #F948B2;
    cursor: pointer;

}

.button-text {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}


/* Footer section */

.footer {
    text-align: center;
    background: #0B0223;
    padding: 100px;

}

.footer-gamer-tag {
    text-align: center;
    font-size: 45px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    color: #FFF;

}

.footer-1 {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-bottom: 40px;
}

.footer-text-2 ul {
    color: #FFF;
    display: flex;
    list-style: none;
    justify-content: center;
    gap: 25px;
    color: rgba(255, 255, 255, 0.60);
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    margin-bottom: 20px;
}

.footer-text-3 {
    color: rgba(255, 255, 255, 0.60);
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
}

.footer-icons {
    display: flex;
    justify-content: center;
    gap: 40px;
}

.footer-icons img {
    width: 35px;
    height: 35px;
    flex-shrink: 0;
    margin-bottom: 40px;

}

.footer-text ul {
    display: flex;
    list-style: none;
    justify-content: center;
    gap: 40px;
    color: #FFF;
    font-size: 15px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    margin-bottom: 40px;
}

.hide {
    display: none;
}


@media screen and (max-width: 576px) {

    /* navigation part  */

    head {}

    nav {
        flex-direction: column;

    }

    .nav-2 {
        flex-direction: column;

    }

    .div-2 ul {
        flex-direction: column;
    }

    /* banner part  */

    .banner {
        flex-direction: column;
        padding: 20px;

    }

    /* online games part  */
    .online-games {
        flex-direction: column;
    }

    .box-container {
        flex-direction: column;
    }

    /* play part  */

    .play {
        flex-direction: column;
        padding: 5px;
        width: 90%;
        margin: 0 auto;
    }

    /* footer part  */

}

